--- a/IliAs/AndroidManifest.xml
+++ b/IliAs/AndroidManifest.xml
@@ -25,6 +25,7 @@
        <activity android:label="@string/app_name" android:name=".MainTabView" />
     <activity android:label="@string/app_name" android:name=".MainActivityAnzeige" /> 
     <activity android:label="@string/app_name" android:name=".Menu_setting" /> 
+    <activity android:label="@string/app_name" android:name="Dozent_kurse"/>
     </application>
 
 
