--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
        <activity android:label="@string/app_name" android:name=".MainTabView" />
     <activity android:label="@string/app_name" android:name=".MainActivityAnzeige" /> 
+    <activity android:label="@string/app_name" android:name=".Dozent_kurse" /> 
     </application>
 
 
