--- a/IliConnect/AndroidManifest.xml
+++ b/IliConnect/AndroidManifest.xml
@@ -5,9 +5,10 @@
 
     <uses-sdk
         android:minSdkVersion="6"
-        android:targetSdkVersion="10" />
+        android:targetSdkVersion="11" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:icon="@drawable/ic_launcher"
