--- a/IliConnect/AndroidManifest.xml
+++ b/IliConnect/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.iliConnect"
     android:versionCode="1"
-    android:versionName="1.2" >
+    android:versionName="1.2"
+    android:installLocation="auto" >
 
     <uses-sdk
         android:minSdkVersion="6"
@@ -33,6 +34,7 @@
     <activity android:label="@string/app_name" android:name=".Dozent_kurse" android:screenOrientation="portrait" />     
      <activity android:label="@string/app_name" android:name=".Menu_setting" android:screenOrientation="portrait" />
      <activity android:label="@string/settings_menu" android:name=".Einstellungen" android:screenOrientation="portrait" />
+     <activity android:label="@string/app_name" android:name=".SchreibtischDetailActivity" android:screenOrientation="portrait" />
 
    
     <activity android:name="com.google.zxing.client.android.CaptureActivity"
